<resources>
    <string name="menu_home">Home</string>
    <string name="menu_infokas">Info Kas</string>
    <string name="menu_kegiatan">Kegiatan</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="google_icon">google_icon</string>
    <string name="nama">Nama</string>
    <string name="ulangi_katasandi">Ulangi Kata Sandi</string>
    <string name="daftar">DAFTAR</string>
    <string name="tentang">Simtaq adalah sistem informasi masjid at-taqwa yang spesifik menangani sistem informasi pengelolaan keuangan dan kegiatan pada masjid at-taqwa</string>
    <!--    <string name="app_name">Simtaq</string>-->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ekspor_laporan">Ekspor laporan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="tipe_kegiatan">
        <item>Umum</item>
        <item>Undangan</item>
    </string-array>

    <string-array name="tipe_keuangan">
        <item>Pemasukan</item>
        <item>Pengeluaran</item>
    </string-array>

    <string-array name="jenis_keuangan">
        <item>Sewa Sawah</item>
        <item>Infaq</item>
        <item>Renovasi Masjid</item>
        <item>Perawatan Masjid</item>
        <item>Dana Kegiatan</item>
        <item>Lain-lain</item>
    </string-array>

    <string-array name="jenis_pemasukan">
        <item>Sewa Sawah</item>
        <item>Infaq</item>
        <item>Lain-lain</item>
    </string-array>

    <string-array name="jenis_pengeluaran">
        <item>Renovasi Masjid</item>
        <item>Perawatan Masjid</item>
        <item>Dana Kegiatan</item>
        <item>Lain-lain</item>
    </string-array>

    <string-array name="ket_donatur">
        <item>RT 01/RW 01</item>
        <item>RT 02/RW 01</item>
        <item>RT 01/RW 02</item>
        <item>RT 02/RW 02</item>
        <item>RT 01/RW 03</item>
    </string-array>

    <string-array name="petugas_donatur">
        <item>Bpk. Purwanto</item>
        <item>Bpk. Sunali &amp; Ibu Yayuk</item>
        <item>Bpk. Supadi &amp; Ibu Zuliatin</item>
        <item>Bpk. Munari &amp; Cak suhardiman</item>
        <item>Ibu Khotim &amp; Ibu Napiyah</item>
    </string-array>

    <string-array name="lvl_pengguna">
        <item>Jamaah masjid</item>
        <item>Bendahara takmir</item>
        <item>Humas takmir</item>
        <item>Superadmin</item>
    </string-array>
</resources>